--- a/frontpage.css
+++ b/frontpage.css
@@ -2,6 +2,7 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+   
       
 }
 .open-sans-normal {
@@ -24,7 +25,7 @@
     background-image: url(/hero.png.png) ;
 
     background-repeat: no-repeat;
-    width: 1440px;
+    width: 100%;
    min-height: 90vh;
     background-size: cover;
      position: relative;
@@ -82,3 +83,32 @@ margin-bottom:170px ;
 margin-left:267.5px ;
 margin-right:267.5px ;
 }
+.tittle-bar{
+    font-weight: bold;
+    font-size: 42px;
+    color: rgba(37, 36, 50, 1);
+    margin-bottom: 23px;
+    
+      
+}
+.tittle-desp{
+    color:rgba(37, 36, 50, 0.5);
+    font-size: 24px;
+   
+  
+
+}.action{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:220px;
+    margin-top: 116px;
+    margin-bottom: 116px;
+    margin-right:169px ;
+    margin-left: 141px;  
+}
+.set-img img{
+    border: none;
+    border-radius: 48px;
+}
+
