--- a/frontpage.css
+++ b/frontpage.css
@@ -139,3 +139,50 @@ border-radius: 24px;
     justify-content: center;
     align-items: center;
 }
+.tittle3{
+    text-align: center;
+    font-size: 42px;
+    font-weight: bold;
+    color: rgba(37, 36, 50, 1);
+    margin-bottom: 40px;
+}.Designer{
+    font-size: 40px;
+    font-weight: 600px;
+    margin-bottom: 15PX;
+    margin-top: 20px;
+}.des-info{
+   font-size: 28px;
+   font-weight: normal;
+    margin-bottom: 15PX;
+}.Reviewer{
+    color: rgba(117, 117, 117, 1);
+       font-size:28px;
+
+
+}.date{
+    font-size: 20px;
+    font-weight: normal;
+    color: rgba(179, 179, 179, 1);
+}.img-section1{
+    display: flex;
+    gap:15px;
+}.user-say{
+    border: 40px;;
+    background-color:rgba(242, 237, 237, 1);
+    margin:20px; 
+    padding: 40px 40px;
+    border-radius: 40px;
+
+}.user-action{
+display: flex;
+    margin-top: 15px;
+    gap: 6px;
+    
+}.img-section1 img{
+    border: none;
+    border-radius: 50%;
+}.review{
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-bottom: 116px;
+}
