--- a/frontpage.css
+++ b/frontpage.css
@@ -188,14 +188,23 @@ display: flex;
 }.title4 {
     font-size: 40px;
     font-weight: bold;
-
-}.para-title{
+    margin-top: 25px;
+}.imagenew img{
+    margin-top:20px ;
+    justify-content: center;
+    margin-left: 150px;
+   margin-right: 150px;
+   border-radius: 24px;
+   margin-bottom: 71px;
+}
+.para-title{
     font-size: 25px;
     font-weight: normal;
     margin-top: 20px;
 }.newtittle{
     text-align: center;
-    
+    margin-top: 20px;
+
 }.newsleter{
 background-color:rgb(187, 220, 220);
 padding: 130px 230px;
@@ -247,4 +256,31 @@ section textarea{height: 80px;
     border: none;
     margin-top: 10px;
 
+}
+.LOGODES{
+    color: rgba(78, 71, 255, 1);
+    font-size: 100px;
+    font-weight: 1000px;
+    text-align: center;
+}.paragraph{
+    font-size: 29px;
+    text-align: center;
+    color: rgba(137, 135, 161, 1);
+} footer nav li {
+align-items: center;
+font-size: 29px;
+gap: 40px;
+color: rgba(137, 135, 161, 1);
+}
+footer nav ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    gap: 40px;
+}.logo11{
+    margin-top: 116px;
+    margin-bottom: 116px;
+    
 }
