--- a/frontpage.css
+++ b/frontpage.css
@@ -22,7 +22,7 @@
     "wdth" 100;
 }header
 {
-    background-image: url(/hero.png.png) ;
+    background-image: url(/hero.png) ;
 
     background-repeat: no-repeat;
     width: 100%;
